[package]
name = "punchchat"
version = "0.1.0"
authors = ["Dany Sluijk <dany@atlasdev.nl>"]
edition = "2018"
description = "IPv8 implementation for rust."
homepage = "https://github.com/dsluijk/PunchChat"
repository = "https://github.com/dsluijk/PunchChat"
readme = "readme.md"
license-file = "license.md"
keywords = ["cli", "chat", "udp", "punching"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "^0.2.15"
rand = "^0.6.5"
